<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:id="@+id/tab1Layout" android:orientation="horizontal"
	android:padding="30dip"
	android:background="@drawable/beige">

<TableLayout
android:orientation="vertical"
android:layout_height="wrap_content"
android:layout_width="fill_parent"
android:layout_gravity="center" >
	<Button 
	
	 android:id="@+id/Button01" 
	 android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:textStyle="bold"
	  android:textSize="18dp"
	  android:text="@string/RedLine_label"
	  >
	  </Button>
<Button 

android:id="@+id/Button02" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content"
android:textStyle="bold"
	  android:textSize="18dp"
android:text="@string/YellowLine_label"
>
</Button>
	<Button 
	
	 android:id="@+id/Button03" 
	 android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:textStyle="bold"
	  android:textSize="18dp"
	  android:text="@string/BlueLine_label"
	  >
	  </Button>
<Button 

android:id="@+id/Button04" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content"
android:textStyle="bold"
	  android:textSize="18dp"
android:text="@string/GreenLine_label"
>
</Button>

	<Button 
	
	 android:id="@+id/Button05" 
	 android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:textStyle="bold"
	  android:textSize="18dp"
	  android:text="@string/VioletLine_label"
	  >
	  </Button>
<Button 
android:id="@+id/Button06" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content"
android:textStyle="bold"
	  android:textSize="18dp"
android:text="@string/OrangeLine_label">
</Button>
</TableLayout>


	
</LinearLayout>
