<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:id="@+id/tab2Layout" android:orientation="vertical"
	android:background="@drawable/guidess">
		<LinearLayout 
    android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="Please select a source:"
        android:textColor="@color/orange"
        
    />

    <Spinner 
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/source_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:text="Please select a destination:"
    />

    <Spinner 
        android:id="@+id/spinner2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/destination_prompt"
    />
<Button android:layout_width="wrap_content" android:id="@+id/button" android:layout_height="wrap_content" android:text="@string/Show_Fare_label"></Button><Button android:layout_width="wrap_content" android:id="@+id/bmap" android:layout_height="wrap_content" android:text="@string/ShowMap_label" android:layout_gravity="left|right"></Button>








</LinearLayout>
</RelativeLayout>